# nippe

./: .devcontainer.json  .gitignore  README.md  config.yaml  nippegw.yaml  pyproject.toml  repository.yaml
.devcontainer/: devcontainer.json
.github/workflows/: builder.yaml  lint.yaml  python-publish.yml
example/: CHANGELOG.md  DOCS.md  Dockerfile  apparmor.txt  build.yaml  config.yaml
example/translations/: en.yaml
nippe/: Dockerfile  config.yaml
