[build-system]
requires = [
    "setuptools>=65.6.3",
    "setuptools-git-versioning>=1.13.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "nippe"
description = "Nibe Power Performance Enhancer"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "setuptools-git-versioning>=1.13.0",
    "build>=0.9.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest==6.2.5",
    "black==21.9b0",
]
doc = [
    "sphinx==5.2.0",
    "sphinx-click==4.4.0",
    "sphinx-rtd-theme==1.1.1"
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"